fixed bg display issue on mobile

--- a/style.css
+++ b/style.css
@@ -344,6 +344,14 @@ blockquote {
     }
 }
 
+
+@media (max-width: 640px) {
+    #bg,
+    body::before {
+        display: none;
+    }
+}
+
 ::selection {
     color: #28282B;
     background: #FFC300;
